--- a/src/reportes/Reporte.jrxml
+++ b/src/reportes/Reporte.jrxml
@@ -1,121 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="33536307-1982-4a09-a9d9-f8921c3ebeac">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Reporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c2af4564-0849-4e10-9e06-468319de8719">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="AlumnoDni" class="java.lang.Integer">
+	<parameter name="DniAlumno" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT
-     alumno."dni",
-     alumno."nombre",
-     alumno."apellidoP",
-     alumno."apellidoM",
-     matricula."gradoCursar",
-     matricula."pago"
-FROM
-     "matricula" matricula INNER JOIN "alumno" alumno ON matricula."idAlumno" = alumno."idAlumno"
-
-where alumno."dni" = $P!{AlumnoDni}]]>
+		<![CDATA[Select Alumno.Dni, Alumno.Nombre, Alumno.ApellidoP, Alumno.ApellidoM,
+		Matricula.GradoCursar, Matricula.pago
+from Matricula inner join Alumno on 
+Matricula.idAlumno = alumno.idAlumno
+where alumno.Dni = $P!{DniAlumno}]]>
 	</queryString>
-	<field name="dni" class="java.lang.Integer"/>
-	<field name="nombre" class="java.lang.String"/>
-	<field name="apellidoP" class="java.lang.String"/>
-	<field name="apellidoM" class="java.lang.String"/>
-	<field name="gradoCursar" class="java.lang.String"/>
+	<field name="Dni" class="java.lang.Integer"/>
+	<field name="Nombre" class="java.lang.String"/>
+	<field name="ApellidoP" class="java.lang.String"/>
+	<field name="ApellidoM" class="java.lang.String"/>
+	<field name="GradoCursar" class="java.lang.String"/>
 	<field name="pago" class="java.lang.Integer"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="79" splitType="Stretch">
-			<staticText>
-				<reportElement x="159" y="23" width="248" height="36" uuid="d88d65bd-aa6d-45b9-9bf6-a77448a61e7c"/>
-				<textElement textAlignment="Center">
-					<font size="22"/>
-				</textElement>
-				<text><![CDATA[FICHA DE MATRICULA]]></text>
-			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="407" y="-20" width="148" height="20" uuid="a7ed60b9-3981-4007-a272-0733dcc9f250"/>
+				<reportElement x="404" y="0" width="151" height="20" uuid="48633d89-3015-4c42-a89a-8a40b76587d5"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="13" y="0" width="70" height="69" uuid="d179d910-798a-4c2d-92e7-666ed4f10c09"/>
+				<reportElement x="14" y="9" width="70" height="70" uuid="d4909ffa-62c2-461b-968a-4f9f95f8d9d9"/>
 				<imageExpression><![CDATA["C:\\Users\\CLAUDIO CRUZADO\\Documents\\NetBeansProjects\\MatriculasNuevoMilenio\\src\\Imagenes\\LOGO.png"]]></imageExpression>
 			</image>
+			<staticText>
+				<reportElement x="154" y="32" width="264" height="36" uuid="852e005a-0876-4202-b8e3-85f02edeab58"/>
+				<textElement textAlignment="Center">
+					<font size="24"/>
+				</textElement>
+				<text><![CDATA[FICHA DE MATRICULA]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="57" splitType="Stretch">
+		<band height="50" splitType="Stretch">
 			<staticText>
-				<reportElement x="159" y="21" width="248" height="36" uuid="030f4565-955c-487b-92e5-3964c7a55ed2"/>
-				<textElement textAlignment="Center">
-					<font size="22"/>
+				<reportElement x="211" y="14" width="119" height="24" uuid="032d4a93-7707-49e3-86ec-034861cf9d7a"/>
+				<textElement>
+					<font size="18"/>
 				</textElement>
 				<text><![CDATA[I.E.P NUEVO MILENIO]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="251" splitType="Stretch">
-			<textField>
-				<reportElement x="169" y="192" width="100" height="20" uuid="105d31c0-6106-46ae-8ec1-39637529ea30"/>
-				<textFieldExpression><![CDATA[$F{gradoCursar}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="327" y="192" width="100" height="20" uuid="e081aab4-7371-43be-b74e-d33067e4e8c7"/>
-				<textFieldExpression><![CDATA[$F{pago}]]></textFieldExpression>
-			</textField>
+		<band height="42" splitType="Stretch">
 			<staticText>
-				<reportElement x="169" y="102" width="129" height="20" uuid="9f194594-0662-465c-ace9-0b9731b8b069"/>
-				<text><![CDATA[APELLIDO PATERNO]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="42" y="122" width="100" height="20" uuid="1028e312-84b2-422a-b3db-7d4d71b817c0"/>
-				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="44" y="42" width="98" height="20" uuid="d25e1598-1283-4a4e-951b-46960cadc815"/>
-				<textFieldExpression><![CDATA[$F{dni}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="44" y="102" width="100" height="20" uuid="000ec9b2-57b2-4d4a-8a32-21686bdddf21"/>
-				<text><![CDATA[NOMBRES]]></text>
+				<reportElement x="14" y="20" width="100" height="20" uuid="eb1edf39-0710-406c-9037-4775768fa336"/>
+				<text><![CDATA[Dni]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="327" y="172" width="100" height="20" uuid="9fbba4da-fa79-4f2e-af6a-cf13ca812dca"/>
-				<text><![CDATA[PAGO]]></text>
+				<reportElement x="154" y="20" width="100" height="20" uuid="2a692d72-006c-47d0-935c-fdea833aecb7"/>
+				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="44" y="22" width="100" height="20" uuid="b05a3a6f-c395-4ce1-b4ae-829e5ddc526b"/>
-				<text><![CDATA[DNI DEL ALUMNO]]></text>
+				<reportElement x="304" y="20" width="100" height="20" uuid="a4717ae4-4c18-400f-be05-eba3b61da0e9"/>
+				<text><![CDATA[Apellido Paterno]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="309" y="102" width="118" height="20" uuid="18f25dc8-a759-49d5-84e9-013b95a0cb80"/>
-				<text><![CDATA[APELLIDO PATERNO]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="169" y="172" width="100" height="20" uuid="7e90490b-45c2-4c49-ae67-5a6fa1df6c14"/>
-				<text><![CDATA[GRADO A CURSAR]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="169" y="122" width="129" height="20" uuid="88cb1ba9-d5d1-4023-a6fe-f96f812a9b46"/>
-				<textFieldExpression><![CDATA[$F{apellidoP}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="309" y="122" width="118" height="20" uuid="130d477d-6e08-40cb-825a-36eb7c1a3901"/>
-				<textFieldExpression><![CDATA[$F{apellidoM}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="298" y="192" width="22" height="20" uuid="e7fb9098-2d30-4854-965d-0afaa7d308a9"/>
-				<text><![CDATA[S/.]]></text>
+				<reportElement x="434" y="20" width="100" height="20" uuid="abdaf33f-a7b4-4d3a-a926-93265d332f99"/>
+				<text><![CDATA[Apellido Materno]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch"/>
+		<band height="165" splitType="Stretch">
+			<staticText>
+				<reportElement x="434" y="103" width="100" height="20" uuid="228ce5a3-dc15-479e-86c8-e697ff4c9d31"/>
+				<text><![CDATA[PAGO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="418" y="123" width="16" height="20" uuid="0ef9812e-0429-4a76-9db5-b39daecd34a0"/>
+				<text><![CDATA[S/.]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="14" y="20" width="100" height="20" uuid="3af94c0d-8857-43ac-b27f-fa04531b12d9"/>
+				<textFieldExpression><![CDATA[$F{Dni}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="154" y="20" width="100" height="20" uuid="078d0ffd-39ca-4814-9d02-9275b8746ce5"/>
+				<textFieldExpression><![CDATA[$F{Nombre}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="304" y="20" width="100" height="20" uuid="a5879e36-63b0-4bac-87cd-1a7cd7ac39c1"/>
+				<textFieldExpression><![CDATA[$F{ApellidoP}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="434" y="20" width="100" height="20" uuid="b0745c6c-861b-4047-bc95-15f4ef320764"/>
+				<textFieldExpression><![CDATA[$F{ApellidoM}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="254" y="133" width="100" height="20" uuid="b712a4a6-c647-4c7a-8c69-39655dd8abd2"/>
+				<textFieldExpression><![CDATA[$F{GradoCursar}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="254" y="103" width="100" height="20" uuid="ad57d2a6-ef4c-4b43-82fd-42af415679d4"/>
+				<text><![CDATA[Grado a Cursar]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="434" y="123" width="100" height="20" uuid="c102052e-6520-4e88-9121-c142b640f42a"/>
+				<textFieldExpression><![CDATA[$F{pago}]]></textFieldExpression>
+			</textField>
+		</band>
 	</detail>
 	<columnFooter>
 		<band height="45" splitType="Stretch"/>
